# servicenow_bug_tracker

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs  index.html  requirement.md  shell.nix
css/: style.css
js/: auth.js  cookies.js
pages/: bug_report.html  bug_submission.html  bug_table.html
src/: bug_submission.rs  lib.rs
wasm/: servicenow_bug_tracker.d.ts  servicenow_bug_tracker.js  servicenow_bug_tracker_bg.wasm  servicenow_bug_tracker_bg.wasm.d.ts
wasm_env_crypt/: Cargo.toml
wasm_env_crypt/src/: lib.rs
