[package]
name = "servicenow_bug_tracker"
version = "0.1.0"
edition = "2021"
authors = ["justbobinaround <roberthenryjunkins@gmail.com>"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openai_api = {git = "https://github.com/JustBobinAround/openai_api.git", branch="WASM" }
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4.36"
console_error_panic_hook = { version = "0.1.7", optional = true }
wasm_env_crypt = {path = "./wasm_env_crypt"}

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
]

[build-dependencies]
wasm_env_crypt = {path = "./wasm_env_crypt"}

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false
[package.metadata.wasm-pack.profile.release]
wasm-opt = false
[package.metadata.wasm-pack.profile.profiling]
wasm-opt = false

